tests/snapshots/script_snapshot_tests__quine.wls.snap
---
source: tests/script_snapshot_tests.rs
expression: stdout
---
a=InputForm[Print["a=",InputForm[a],";",a]];Print["a=",InputForm[a],";",a]
