tests/snapshots/script_snapshot_tests__random_numbers.wls.snap
---
source: tests/script_snapshot_tests.rs
expression: stdout
---
{1.2417, 0.7615, 1.0633, 0.4948, 1.5391}
