tests/snapshots/script_snapshot_tests__read_a_file_line_by_line.wls.snap
---
source: tests/script_snapshot_tests.rs
expression: stdout
---

OpenRead::noopen: Cannot open input.txt.

Close::stream: $Failed is not a string, SocketObject, InputStream[ ] or OutputStream[ ].
