tests/snapshots/script_snapshot_tests__read_entire_file.wls.snap
---
source: tests/script_snapshot_tests.rs
expression: stdout
---
First line
Second line
Third line
