tests/snapshots/script_snapshot_tests__read_from_command.wls.snap
---
source: tests/script_snapshot_tests.rs
expression: stdout
---
Processed line: alpha
Processed line: beta
Processed line: gamma
