tests/snapshots/script_snapshot_tests__repeat.wls.snap
---
source: tests/script_snapshot_tests.rs
expression: stdout
---
Hello, world!
Hello, world!
Hello, world!
Hello, world!
Hello, world!
