tests/snapshots/script_snapshot_tests__respond_to_an_unknown_method_call.wls.snap
---
source: tests/script_snapshot_tests.rs
expression: stdout
---
This is foo.
This is bar.
What is baz?
