tests/snapshots/script_snapshot_tests__runtime_evaluation.wls.snap
---
source: tests/script_snapshot_tests.rs
expression: stdout
---
2
Hello, world!
3628800
120
40320
