tests/snapshots/script_snapshot_tests__sedols.wls.snap
---
source: tests/script_snapshot_tests.rs
expression: stdout
---
7108899
B0YBKJ7
4065663
B0YBLH2
2282765
B0YBKL9
5579107
B0YBKR5
5852842
B0YBKT7
B0003010
SEDOL[DUMMY]
